# kerislab

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AND_DEVELOPMENT_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  README.md
apps/api/kerislab/: __init__.py  auth.py  main.py  migrations.py  models.py  scope.py  services.py  store.py  worker.py
apps/api/kerislab/migrations/: 001_initial_platform_schema.sql
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  main.tsx  styles.css
assets/: README.md  manifest.md
docs/: 00-spec-index.md  01-functional-specification.md  02-personas.md  03-user-stories.md  04-autonomous-pentesting-engine.md  05-ui-ux-design-system.md  06-technical-architecture.md  07-acceptance-test-plan.md  08-docker-compose-deployment.md
scripts/: compose_backup.py  compose_ops.py  compose_preflight.py  compose_restore.py  compose_smoke.py
tests/: test_api_contract.py  test_api_http.py  test_auth.py  test_migrations.py  test_scope.py  test_services.py  test_store.py
