[project]
name = "kerislab"
version = "0.1.0"
description = "KerisLab MVP: guarded autonomous security testing platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["kerislab*"]
