[project]
name = "kerislab"
version = "0.1.0"
description = "KerisLab MVP: guarded autonomous security testing platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0",
]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["kerislab*"]

[tool.setuptools.package-data]
kerislab = ["migrations/*.sql"]
